###############################################################################
## Project Source #############################################################
###############################################################################
target_sources(p2p_file_sync 
    PRIVATE
    "main.cc"
)

add_subdirectory(utils)

###############################################################################
## Testing Source #############################################################
###############################################################################
