###############################################################################
## Project Source #############################################################
###############################################################################
target_sources(p2p_file_sync 
    PRIVATE
    "main.cc"
    "sync.cc"
)


###############################################################################
## Project Utils ##############################################################
###############################################################################

add_subdirectory(utils)

###############################################################################
## Fuse Implementation  #######################################################
###############################################################################

add_subdirectory(fuse)

###############################################################################
## Testing Source #############################################################
###############################################################################
