###############################################################################
## Commands ###################################################################
###############################################################################
# commans sources
file(GLOB COMMAND_SRCS command/*_command.cc)
target_sources(daemon PRIVATE ${COMMAND_SRCS})

###############################################################################
## Utils ###################################################################
###############################################################################
add_subdirectory(utils)

###############################################################################
## Sources ####################################################################
###############################################################################
file(GLOB INTERFACE_HDRS ${CMAKE_CURRENT_LIST_DIR}/*.h)
file(GLOB INTERFACE_SRCS ${CMAKE_CURRENT_LIST_DIR}/*.cc)

# project sources
target_sources(daemon
        PRIVATE
        ${COMMAND_SRCS}
        ${INTERFACE_SRCS} ${INTERFACE_HDRS})